// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Access/> should render properly 1`] = `
<div>
  <div
    class="full-width"
  >
    <div
      class="page-header pageHeader"
    >
      <h1
        class="d-flex align-items-center"
      >
        Access management
      </h1>
    </div>
    <div
      class="pageContainer container-fluid"
    >
      <div
        class="contentWrapper"
      >
        <form
          class=""
        >
          <h4
            class="mb-2"
          >
            <i
              class="material-icons mr-1"
            >
              vpn_key
            </i>
            Single Sign-On
          </h4>
          <p>
            Social and business single sign-on allows agents to access Gorgias using their Google accounts. When you enable the SSO methods, a sign-in button is added to the log-in page.
          </p>
          <div
            class="mb-2 d-flex align-items-center"
          >
            <label
              class="container"
              for="toggle-button-42"
            >
              <input
                class="input"
                disabled=""
                id="toggle-button-42"
                name="toggle-button-42"
                type="checkbox"
              />
              <div
                class="slider"
              />
            </label>
            <img
              alt="Google logo"
              class="ml-3 mr-2"
              src="test-file-stub"
              style="height: 1.4em;"
            />
            <b>
              Enable 
              Google
               Single Sign-On
            </b>
          </div>
          <h4
            class="mt-5 mb-2"
          >
            <i
              class="material-icons mr-1"
            >
              mail
            </i>
            Joining the helpdesk
          </h4>
          <p>
            If you allow people to join automatically, anyone with an approved email address can use this link to confirm their email and sign up:
             
            <a
              href="https://acme.gorgias.com/signup"
            >
              https://acme.gorgias.com/signup
            </a>
          </p>
          <fieldset
            class="mb-3"
            name="radio-field-42"
          >
            <div
              class="option"
            >
              <label
                class="label"
                for="invite"
              >
                <input
                  checked=""
                  class="input"
                  id="invite"
                  name="radio-field-42"
                  type="radio"
                />
                Invite people manually
              </label>
            </div>
            <div
              class="option"
            >
              <label
                class="label"
                for="allowed-domains"
              >
                <input
                  class="input"
                  id="allowed-domains"
                  name="radio-field-42"
                  type="radio"
                />
                Let people sign up automatically, and only accept email addresses from specific domains
              </label>
            </div>
          </fieldset>
          <button
            class="btn btn-primary"
            type="submit"
          >
            Save changes
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Access/> should render with the previously saved settings 1`] = `
<div>
  <div
    class="full-width"
  >
    <div
      class="page-header pageHeader"
    >
      <h1
        class="d-flex align-items-center"
      >
        Access management
      </h1>
    </div>
    <div
      class="pageContainer container-fluid"
    >
      <div
        class="contentWrapper"
      >
        <form
          class=""
        >
          <h4
            class="mb-2"
          >
            <i
              class="material-icons mr-1"
            >
              vpn_key
            </i>
            Single Sign-On
          </h4>
          <p>
            Social and business single sign-on allows agents to access Gorgias using their Google accounts. When you enable the SSO methods, a sign-in button is added to the log-in page.
          </p>
          <div
            class="mb-2 d-flex align-items-center"
          >
            <label
              class="container"
              for="toggle-button-42"
            >
              <input
                class="input"
                disabled=""
                id="toggle-button-42"
                name="toggle-button-42"
                type="checkbox"
              />
              <div
                class="slider"
              />
            </label>
            <img
              alt="Google logo"
              class="ml-3 mr-2"
              src="test-file-stub"
              style="height: 1.4em;"
            />
            <b>
              Enable 
              Google
               Single Sign-On
            </b>
          </div>
          <h4
            class="mt-5 mb-2"
          >
            <i
              class="material-icons mr-1"
            >
              mail
            </i>
            Joining the helpdesk
          </h4>
          <p>
            If you allow people to join automatically, anyone with an approved email address can use this link to confirm their email and sign up:
             
            <a
              href="https://acme.gorgias.com/signup"
            >
              https://acme.gorgias.com/signup
            </a>
          </p>
          <fieldset
            class="mb-3"
            name="radio-field-42"
          >
            <div
              class="option"
            >
              <label
                class="label"
                for="invite"
              >
                <input
                  class="input"
                  id="invite"
                  name="radio-field-42"
                  type="radio"
                />
                Invite people manually
              </label>
            </div>
            <div
              class="option"
            >
              <label
                class="label"
                for="allowed-domains"
              >
                <input
                  checked=""
                  class="input"
                  id="allowed-domains"
                  name="radio-field-42"
                  type="radio"
                />
                Let people sign up automatically, and only accept email addresses from specific domains
              </label>
            </div>
          </fieldset>
          <div
            class="InputField form-group"
            color=""
          >
            <div
              class=""
            >
              <textarea
                class="form-control"
                id="id-input-42"
              >
                gorgias.com
gorgias.io
              </textarea>
              
            </div>
            <small
              class="form-text text-muted"
            >
              Ex: domain.com, *.domain.com. Wildcards allowed. Use separate lines for multiple entries.
            </small>
          </div>
          <button
            class="btn btn-primary"
            type="submit"
          >
            Save changes
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Access/> should show an error and block submit when using a generic domain 1`] = `
<div>
  <div
    class="full-width"
  >
    <div
      class="page-header pageHeader"
    >
      <h1
        class="d-flex align-items-center"
      >
        Access management
      </h1>
    </div>
    <div
      class="pageContainer container-fluid"
    >
      <div
        class="contentWrapper"
      >
        <form
          class=""
        >
          <h4
            class="mb-2"
          >
            <i
              class="material-icons mr-1"
            >
              vpn_key
            </i>
            Single Sign-On
          </h4>
          <p>
            Social and business single sign-on allows agents to access Gorgias using their Google accounts. When you enable the SSO methods, a sign-in button is added to the log-in page.
          </p>
          <div
            class="mb-2 d-flex align-items-center"
          >
            <label
              class="container"
              for="toggle-button-42"
            >
              <input
                class="input"
                disabled=""
                id="toggle-button-42"
                name="toggle-button-42"
                type="checkbox"
              />
              <div
                class="slider"
              />
            </label>
            <img
              alt="Google logo"
              class="ml-3 mr-2"
              src="test-file-stub"
              style="height: 1.4em;"
            />
            <b>
              Enable 
              Google
               Single Sign-On
            </b>
          </div>
          <h4
            class="mt-5 mb-2"
          >
            <i
              class="material-icons mr-1"
            >
              mail
            </i>
            Joining the helpdesk
          </h4>
          <p>
            If you allow people to join automatically, anyone with an approved email address can use this link to confirm their email and sign up:
             
            <a
              href="https://acme.gorgias.com/signup"
            >
              https://acme.gorgias.com/signup
            </a>
          </p>
          <fieldset
            class="mb-3"
            name="radio-field-42"
          >
            <div
              class="option"
            >
              <label
                class="label"
                for="invite"
              >
                <input
                  class="input"
                  id="invite"
                  name="radio-field-42"
                  type="radio"
                />
                Invite people manually
              </label>
            </div>
            <div
              class="option"
            >
              <label
                class="label"
                for="allowed-domains"
              >
                <input
                  checked=""
                  class="input"
                  id="allowed-domains"
                  name="radio-field-42"
                  type="radio"
                />
                Let people sign up automatically, and only accept email addresses from specific domains
              </label>
            </div>
          </fieldset>
          <div
            class="InputField form-group"
            color="danger"
          >
            <div
              class=""
            >
              <textarea
                class="form-control-danger is-invalid form-control"
                id="id-input-42"
              >
                gmail.com
              </textarea>
              <div
                class="invalid-feedback"
              >
                Generic domain: gmail.com
              </div>
            </div>
            <small
              class="form-text text-muted"
            >
              Ex: domain.com, *.domain.com. Wildcards allowed. Use separate lines for multiple entries.
            </small>
          </div>
          <button
            class="btn btn-primary disabled"
            disabled=""
            type="submit"
          >
            Save changes
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;
